<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    tools:context="com.mgumiero9.banconeontest.FullscreenActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="280sp"
        android:layout_height="360sp"
        android:layout_gravity="center"
        android:background="@drawable/bg"
        tools:context="com.mgumiero9.banconeontest.FullscreenActivity">

        <!-- The primary full-screen view. This can be replaced with whatever view
             is needed to present your content, e.g. VideoView, SurfaceView,
             TextureView, etc. -->

        <!-- This FrameLayout insets its children based on system windows using
             android:fitsSystemWindows. -->
        <ImageView
            android:id="@+id/iv_pic_fragment"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginEnd="96sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="96sp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/marcelo" />

        <TextView
            android:id="@+id/tv_my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_pic_fragment" />

        <TextView
            android:id="@+id/tv_my_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="15sp"
            android:text="@string/mobile_for_test"
            android:textColor="@color/blueDark1"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_name" />

        <TextView
            android:id="@+id/tv_withdraw_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:elevation="15sp"
            android:text="@string/withdraw_value"
            android:textColor="@color/blueDark1"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_phone" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.95"
            >

            <EditText
                android:id="@+id/et_value"
                android:layout_width="match_parent"
                android:layout_height="37sp"
                android:layout_weight="1"
                android:background="@drawable/square_round_all"
                android:hint="@string/_0_00"
                android:textColorHint="@color/blueDark1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:inputType="textAutoComplete|phone|textPostalAddress"
                android:lines="1"
                android:maxLength="6"
                android:textSize="24sp"
                android:textColor="@color/bn"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10" />

            <Button
                android:id="@+id/btn_value_send"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_next_shape_full"
                android:text="@string/send"
                android:textColor="@color/white" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</FrameLayout>




